Stop buttons in the Manage Reports list from wrapping

--- a/html/admin/css/style.styl
+++ b/html/admin/css/style.styl
@@ -13510,9 +13510,9 @@
 		td:nth-child(2)
 		td:nth-child(3)
 		td:nth-child(4)
-			width 160px
+			width 10em
 		td:nth-child(5)
-			width 246px
+			width 20em
 
 .flex-page-report-manage-heading
 	appearance-flex-page-heading()
